--- a/templates/base.html
+++ b/templates/base.html
@@ -24,7 +24,7 @@
                 </div>
             {% else %}
                 <div>
-                    <a href="{% url 'login' %}">Login</a> |
+                    <a href="{% url 'users:login' %}">Login</a> |
                     <a href="{% url 'users:register' %}">Register</a>
                 </div>
             {% endif %}
